--- a/code/R-notebook/ch03/03.01.ipynb
+++ b/code/R-notebook/ch03/03.01.ipynb
@@ -80,8 +80,7 @@
     "x * y\n",
     "#> [1] 6\n",
     "\n",
-    "library(keras)\n",
-    "c(x, y) %<-% c(20, 30) # まとめて名付け\n",
+    "keras::`%<-%`(c(x, y), c(20, 30)) # まとめて名付け\n",
     "x * y\n",
     "#> [1] 600"
    ]
