--- a/code/R-notebook/ch11/11.03.ipynb
+++ b/code/R-notebook/ch11/11.03.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "library(keras)\n",
     "library(tidyverse)\n",
-    "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()"
+    "keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())"
    ]
   },
   {
