--- a/code/R-notebook/ch11/11.ipynb
+++ b/code/R-notebook/ch11/11.ipynb
@@ -299,7 +299,7 @@
    "source": [
     "library(keras)\n",
     "library(tidyverse)\n",
-    "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()"
+    "keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())"
    ]
   },
   {
@@ -804,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
+    "keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
     "my_index <- sample(1:60000, 6000)\n",
     "x_train <- x_train[my_index, , ]\n",
     "y_train <- y_train[my_index]"
