--- a/code/Rmd/ch11/11.03.Rmd
+++ b/code/Rmd/ch11/11.03.Rmd
@@ -5,7 +5,7 @@
 ```{r}
 library(keras)
 library(tidyverse)
-c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
+keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
 ```
 
 ```{r}
