--- a/code/Rmd/ch11/11.Rmd
+++ b/code/Rmd/ch11/11.Rmd
@@ -167,7 +167,7 @@ c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1)))
 ```{r}
 library(keras)
 library(tidyverse)
-c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
+keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
 ```
 
 ```{r}
@@ -478,7 +478,7 @@ plot(y, y_)
 ### 11.4.4 AutoMLによる分類
 
 ```{r}
-c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
+keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
 my_index <- sample(1:60000, 6000)
 x_train <- x_train[my_index, , ]
 y_train <- y_train[my_index]
