--- a/code/Rmd/ch03/03.Rmd
+++ b/code/Rmd/ch03/03.Rmd
@@ -38,8 +38,7 @@ y <- 3
 x * y
 #> [1] 6
 
-library(keras)
-c(x, y) %<-% c(20, 30) # まとめて名付け
+keras::`%<-%`(c(x, y), c(20, 30)) # まとめて名付け
 x * y
 #> [1] 600
 ```
