numeric_only=True

--- a/code/Python-notebook/python-04.ipynb
+++ b/code/Python-notebook/python-04.ipynb
@@ -1,13 +1,13 @@
 {
   "cells": [
     {
-      "id": "5f8fb03e",
+      "id": "e2c74d1c",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)\n\n\n",
       "metadata": {}
     },
     {
-      "id": "2a365362",
+      "id": "1a7bf9d1",
       "cell_type": "markdown",
       "source": "## 4.1 \u8a18\u8ff0\u7d71\u8a08",
       "metadata": {}
@@ -32,7 +32,7 @@
         "    [165, 170, 175, 180, 185])\n",
         "x.mean() # np.mean(x)\u3082\u53ef"
       ],
-      "id": "e4bbf40f-8d9a-4a91-91ae-7b7537c69bda"
+      "id": "795140ab-920e-4890-97f8-9396761d4831"
     },
     {
       "cell_type": "code",
@@ -43,7 +43,7 @@
         "n = len(x) # \u30b5\u30f3\u30d7\u30eb\u30b5\u30a4\u30ba\n",
         "sum(x) / n"
       ],
-      "id": "fa7f1f1b-e9ec-4fc4-a9a8-d87b02dbc2db"
+      "id": "398149ed-aa76-4a14-be5d-cf67f9735739"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
         "y = [173, 174, 175, 176, 177]\n",
         "np.mean(y)"
       ],
-      "id": "ee02b38a-8968-491a-9bf0-5cc0afa3f894"
+      "id": "bef021cf-b96d-44ec-8195-2c0e3688fa1e"
     },
     {
       "cell_type": "code",
@@ -66,7 +66,7 @@
         "\n",
         "np.var(y, ddof=1) # y\u306e\u5206\u6563"
       ],
-      "id": "42facf81-a5bc-4525-bad0-e86315e20407"
+      "id": "a86a6375-9aa8-48b8-87bc-70a9b9608c6e"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
       "source": [
         "sum((x - np.mean(x))**2) / (n - 1)"
       ],
-      "id": "ddcaaba4-488b-43ab-a045-f41c2337406b"
+      "id": "a8a89593-15f6-4959-8e55-46fb2910cd52"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
         "\n",
         "np.std(y, ddof=1) # y\u306e\u6a19\u6e96\u504f\u5dee"
       ],
-      "id": "f19b39af-a211-4f38-a83f-1023a74307cb"
+      "id": "f27b72e0-6743-4066-b438-70bd81b638d0"
     },
     {
       "cell_type": "code",
@@ -98,7 +98,7 @@
       "source": [
         "np.var(x, ddof=1)**0.5 # x\u306e\u6a19\u6e96\u504f\u5dee"
       ],
-      "id": "7ec60162-9206-4b2d-8e52-fce66769e65a"
+      "id": "12f4f24a-02b8-49d9-8bf6-c7762a176c92"
     },
     {
       "cell_type": "code",
@@ -109,7 +109,7 @@
         "s = pd.Series(x)\n",
         "s.describe()"
       ],
-      "id": "8592ef95-26fb-434e-a5b4-06c09ae17c6b"
+      "id": "b999dbdd-aaa3-49a7-b2cd-bbfd8649dc90"
     },
     {
       "cell_type": "code",
@@ -119,7 +119,7 @@
       "source": [
         "# s.describe()\u3067\u8a08\u7b97\u6e08\u307f"
       ],
-      "id": "f9aa3ea5-145b-4d6e-b26e-a56cd18b0813"
+      "id": "cce422df-1cf0-4c39-a0f2-0378b4d7a481"
     },
     {
       "cell_type": "code",
@@ -133,7 +133,7 @@
         "\n",
         "np.var(x, ddof=0) # \u6a19\u672c\u5206\u6563"
       ],
-      "id": "906bde36-4465-453c-b33b-4d247d929a5a"
+      "id": "41d87408-2117-4b29-adde-ab4130a91e6a"
     },
     {
       "cell_type": "code",
@@ -145,7 +145,7 @@
         "\n",
         "np.std(x, ddof=0) # \u221a\u6a19\u672c\u5206\u6563"
       ],
-      "id": "37c95c22-d736-4412-bbbf-056f3c82b3ae"
+      "id": "26703e04-20e5-411b-95b5-0629964fa893"
     },
     {
       "cell_type": "code",
@@ -155,7 +155,7 @@
       "source": [
         "np.std(x, ddof=1) / len(x)**0.5"
       ],
-      "id": "1f826a97-cdae-48e0-8b66-713c81a4b63a"
+      "id": "6fcfadb2-6298-4cf2-a824-746d3138c171"
     },
     {
       "cell_type": "code",
@@ -172,7 +172,7 @@
         "    'math':    [ 70,  80,  90, 100],\n",
         "    'gender':  ['f', 'm', 'm', 'f']})"
       ],
-      "id": "f0bf8cea-2067-4235-91ea-7f5d9aaf8e2d"
+      "id": "d2b05c61-6cc9-4d4a-89ef-a2b1ee204991"
     },
     {
       "cell_type": "code",
@@ -184,7 +184,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "np.var(my_df['english'], ddof=1)\n"
       ],
-      "id": "18362c75-921e-45d6-a211-3617bbd0d255"
+      "id": "e83f2394-5dcd-4a17-b250-dab9642f4b86"
     },
     {
       "cell_type": "code",
@@ -192,14 +192,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "my_df.var()\n",
+        "my_df.var(numeric_only=True)\n",
         "# \u3042\u308b\u3044\u306f\n",
-        "my_df.apply('var')\n",
+        "my_df.apply('var', numeric_only=True)\n",
         "# \u3042\u308b\u3044\u306f\n",
         "my_df.iloc[:, [1, 2]].apply(\n",
         "    lambda x: np.var(x, ddof=1))\n"
       ],
-      "id": "2fbdd1fb-c2d3-4ade-b585-4c74d5009725"
+      "id": "967d221d-fd18-4710-8329-f1236cd67047"
     },
     {
       "cell_type": "code",
@@ -209,7 +209,7 @@
       "source": [
         "my_df.describe()"
       ],
-      "id": "24e4ca47-7f86-4339-addd-3fec38dfdd31"
+      "id": "b94fabc5-2dd3-4ade-a4f2-f77dc580bedf"
     },
     {
       "cell_type": "code",
@@ -224,7 +224,7 @@
         "\n",
         "my_df.groupby('gender').apply(len)"
       ],
-      "id": "51ed5b6b-e7ef-44e5-9ba3-f77030d7d584"
+      "id": "872f93b3-3b33-493c-a47e-b3621801bd6a"
     },
     {
       "cell_type": "code",
@@ -237,7 +237,7 @@
         "pd.crosstab(my_df2.gender,\n",
         "            my_df2.excel)"
       ],
-      "id": "faa17059-e702-443a-b542-2b0859042ced"
+      "id": "a20ca42f-cd29-452f-89b6-42f6fa9f9f61"
     },
     {
       "cell_type": "code",
@@ -245,16 +245,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "my_df.groupby('gender').mean()\n",
+        "my_df.groupby('gender').mean(numeric_only=True)\n",
         "# \u3042\u308b\u3044\u306f\n",
-        "my_df.groupby('gender').agg('mean')\n",
+        "my_df.groupby('gender').agg('mean', numeric_only=True)\n",
         "# \u3042\u308b\u3044\u306f\n",
-        "my_df.groupby('gender').agg(np.mean)\n"
+        "my_df.drop(['name'], axis=1).groupby('gender').agg(np.mean)\n"
       ],
-      "id": "7a6a8544-6a47-43bf-b4d8-f22099ef5539"
+      "id": "9824ae3f-0d4c-430f-9e50-e1c4b1013764"
     },
     {
-      "id": "5006e87e",
+      "id": "c80e9683",
       "cell_type": "markdown",
       "source": "## 4.2 \u30c7\u30fc\u30bf\u306e\u53ef\u8996\u5316",
       "metadata": {}
@@ -271,7 +271,7 @@
         "iris = sm.datasets.get_rdataset('iris', 'datasets').data\n",
         "iris.head()"
       ],
-      "id": "fe204e1c-2700-45d8-aca7-c9afba652f40"
+      "id": "b12711a6-de8f-4f92-9fc9-74f555044869"
     },
     {
       "cell_type": "code",
@@ -281,7 +281,7 @@
       "source": [
         "iris.hist('Sepal.Length')"
       ],
-      "id": "c491098a-91fd-4de7-b855-826ea18e873a"
+      "id": "7cce5286-75dd-44d0-8462-7c01d06b1359"
     },
     {
       "cell_type": "code",
@@ -293,7 +293,7 @@
         "    {'x': [10, 20, 30]})\n",
         "my_df.hist('x', bins=2) # \u968e\u7d1a\u6570\u306f2"
       ],
-      "id": "712bf2c7-fe81-4640-8f98-520b8febb174"
+      "id": "4089bec0-9f90-4bf1-8283-5b4c396c1a07"
     },
     {
       "cell_type": "code",
@@ -306,7 +306,7 @@
         "iris.hist('Sepal.Length',\n",
         "          bins=tmp.round(2))"
       ],
-      "id": "08d1f068-391a-4bc5-b48b-15ff127b36f9"
+      "id": "8799953f-7abb-44fd-b76d-fe1213750d3e"
     },
     {
       "cell_type": "code",
@@ -318,7 +318,7 @@
         "          'Sepal.Width',\n",
         "          kind='scatter')"
       ],
-      "id": "9e0cedfd-e9a8-47aa-9f18-02943408db62"
+      "id": "8e0e9abc-ae85-4469-a7d0-9c7707d721ea"
     },
     {
       "cell_type": "code",
@@ -328,7 +328,7 @@
       "source": [
         "iris.boxplot()"
       ],
-      "id": "201be043-cd48-4275-8292-1b3eb2489689"
+      "id": "016625a8-8e87-4816-8afe-a18926dbc0af"
     },
     {
       "cell_type": "code",
@@ -344,7 +344,7 @@
         "               len(iris)**0.5)\n",
         "my_df"
       ],
-      "id": "9b241b1a-3789-4d9b-8bfb-a5c5ee912eb0"
+      "id": "8638d290-1cf3-4401-9172-57828ab40311"
     },
     {
       "cell_type": "code",
@@ -354,7 +354,7 @@
       "source": [
         "my_df.plot(y='mean', kind='bar', yerr='se', capsize=10)"
       ],
-      "id": "3b1a714b-273a-4d74-a8cc-f9666cbd7533"
+      "id": "f86f2cb9-088b-4fe4-9e4c-6b62f0f8bd4e"
     },
     {
       "cell_type": "code",
@@ -367,7 +367,7 @@
         "my_se = my_group.agg(lambda x: x.std() / len(x)**0.5) # \u6a19\u6e96\u8aa4\u5dee\u3092\u6c42\u3081\u308b\uff0e\n",
         "my_se"
       ],
-      "id": "86e01a8c-69b0-4428-9cc9-9432c058887f"
+      "id": "ffb4e587-5f80-4d28-86cd-04e3ff99d13f"
     },
     {
       "cell_type": "code",
@@ -377,7 +377,7 @@
       "source": [
         "my_group.agg('mean').plot(kind='bar', yerr=my_se, capsize=5)"
       ],
-      "id": "1184e616-d6c8-4682-bbfb-97ffbeab1096"
+      "id": "98c7367c-70c5-44ce-865e-759d3de6aebb"
     },
     {
       "cell_type": "code",
@@ -400,7 +400,7 @@
         "mosaic(my_df,\n",
         "       index=['Species', 'w_Sepal'])"
       ],
-      "id": "96b38ac0-4874-4df4-961f-3add3427c367"
+      "id": "cda2f397-e13a-4cd3-a566-4c5dcacacd79"
     },
     {
       "cell_type": "code",
@@ -412,7 +412,7 @@
         "my_table.index   = [str(x) for x in my_table.index]\n",
         "mosaic(my_df, index=['Species', 'w_Sepal'], labelizer=lambda k: my_table.loc[k])"
       ],
-      "id": "47db7fa6-cf2e-4a98-a78b-7b1ba12f4168"
+      "id": "d7263d0e-02cb-49cf-9d7e-f81c4e511041"
     },
     {
       "cell_type": "code",
@@ -427,10 +427,10 @@
         "y = x**3 - x\n",
         "plt.plot(x, y)"
       ],
-      "id": "26050df6-c81b-40ec-898f-ce1f6660ab60"
+      "id": "9540d6a0-3359-46a6-a91c-f46d2bfdf175"
     },
     {
-      "id": "6eb754aa",
+      "id": "ee64f5c2",
       "cell_type": "markdown",
       "source": "## 4.3 \u4e71\u6570",
       "metadata": {}
@@ -445,7 +445,7 @@
         "import numpy as np\n",
         "rng = np.random.default_rng()"
       ],
-      "id": "322768e2-b62a-4454-bdb7-b27b757f31af"
+      "id": "2161872e-86ef-4b19-935e-0a85c50c8252"
     },
     {
       "cell_type": "code",
@@ -467,7 +467,7 @@
         "\n",
         "plt.hist(x, bins=6) # \u30d2\u30b9\u30c8\u30b0\u30e9\u30e0"
       ],
-      "id": "35784622-40e4-4853-b8e4-f0e615a4993c"
+      "id": "40fa3822-4fa3-4316-9e92-9a1344531289"
     },
     {
       "cell_type": "code",
@@ -485,7 +485,7 @@
         "    size=1000) # \u4e71\u6570\u306e\u6570\n",
         "plt.hist(x)"
       ],
-      "id": "ff07da40-3255-469e-9bdb-93d5479f14f0"
+      "id": "7bd48d03-6811-49a2-a2ad-132a065a9f07"
     },
     {
       "cell_type": "code",
@@ -500,7 +500,7 @@
         "x = [int(k) for k in tmp]\n",
         "plt.hist(x, bins=6) # \u7d50\u679c\u306f\u5272\u611b"
       ],
-      "id": "c6174d84-e540-4f6d-86a4-5bf8f05fa947"
+      "id": "6013ff55-d3d8-4694-b8c2-cc1e580a1e80"
     },
     {
       "cell_type": "code",
@@ -519,7 +519,7 @@
         "    size=r) # \u4e71\u6570\u306e\u6570\n",
         "plt.hist(x, bins=max(x) - min(x))"
       ],
-      "id": "fac1fbe9-c053-4e0e-8e06-0867694e6002"
+      "id": "da8ba664-1bf6-4a6d-aefb-f63224b27d82"
     },
     {
       "cell_type": "code",
@@ -536,7 +536,7 @@
         "    size=r)  # \u4e71\u6570\u306e\u6570\n",
         "plt.hist(x, bins=40)"
       ],
-      "id": "9a0458e2-2df7-40de-b85a-b792b51d9716"
+      "id": "980bdb07-8aeb-49e8-a4d8-2543f40620cf"
     },
     {
       "cell_type": "code",
@@ -555,7 +555,7 @@
         "                      np.std(tmp, ddof=1) / n**0.5], # \u6a19\u6e96\u8aa4\u5dee\n",
         "                     index=['k', 'mean', 'se'])"
       ],
-      "id": "194f5b5e-4d0c-4d2b-9aac-399b1b0ce00b"
+      "id": "9a476f7a-53f6-4495-a5f9-265e8ea49d9a"
     },
     {
       "cell_type": "code",
@@ -567,7 +567,7 @@
         "    return np.var(x, ddof=1)\n",
         "pd.Series([10, 20, 30]).apply(f)"
       ],
-      "id": "5429e689-6913-422d-bfa3-e7e5936e4f49"
+      "id": "66669c17-e835-45cf-b82f-9e7ba7690a8e"
     },
     {
       "cell_type": "code",
@@ -579,7 +579,7 @@
         "    return np.std(x, ddof=1)\n",
         "pd.Series([10, 20, 30]).apply(f)"
       ],
-      "id": "8d8fb82a-7356-4e6e-8438-c2055b78d362"
+      "id": "2b560ad4-814c-4993-98f5-c592692843f4"
     },
     {
       "cell_type": "code",
@@ -597,10 +597,10 @@
         "             gamma(n / 2)))\n",
         "pd.Series([10, 20, 30]).apply(f)"
       ],
-      "id": "b54f12bd-77b3-4ccd-a56c-130c6d2a2be5"
+      "id": "34949c21-f688-40b3-b0fa-35ad075b7fe0"
     },
     {
-      "id": "5d61b645",
+      "id": "2439e798",
       "cell_type": "markdown",
       "source": "## 4.4 \u7d71\u8a08\u7684\u63a8\u6e2c",
       "metadata": {}
@@ -620,7 +620,7 @@
         "                                    # \u5de6\u7247\u5074\u691c\u5b9a\u306a\u3089'smaller'\n",
         "                                    # \u53f3\u7247\u5074\u691c\u5b9a\u306a\u3089'larger'"
       ],
-      "id": "1efe08a9-8f40-4dfb-a351-8c9d13e53d45"
+      "id": "61a0617f-fef7-4275-99cb-dd811f6f900a"
     },
     {
       "cell_type": "code",
@@ -646,7 +646,7 @@
         "ax.hlines(y=my_pr2, xmin=0, xmax=15)    # \u6c34\u5e73\u7dda\n",
         "ax.vlines(x=x,      ymin=0, ymax=my_pr) # \u5782\u76f4\u7dda"
       ],
-      "id": "3ea64a21-8188-4463-9bdb-827e89883656"
+      "id": "cf76de29-8f0f-48e0-bb40-981ec67c57e9"
     },
     {
       "cell_type": "code",
@@ -661,7 +661,7 @@
         "    alpha=a, # \u6709\u610f\u6c34\u6e96\uff08\u7701\u7565\u53ef\uff09\n",
         "    method='binom_test')"
       ],
-      "id": "79d61da5-9c38-4310-9934-55dcb29d3c21"
+      "id": "35a16673-d24e-437e-9005-055da1093487"
     },
     {
       "cell_type": "code",
@@ -679,7 +679,7 @@
         "\n",
         "my_df.plot(x='t', legend=None, xlabel=r'$\\theta$', ylabel=r'p-value')"
       ],
-      "id": "a808ccff-d85e-4ed0-866b-746ffd1a7d6a"
+      "id": "b78cd17c-2bc6-426e-9452-fd76e134a6ff"
     },
     {
       "cell_type": "code",
@@ -704,7 +704,7 @@
         "\n",
         "d.tconfint_mean(alpha=a, alternative=alt) # \u4fe1\u983c\u533a\u9593"
       ],
-      "id": "52fb2829-544a-4f05-b929-8c7ac1b99e6a"
+      "id": "bf8eab13-731a-4898-8b0d-32980fb078ef"
     },
     {
       "cell_type": "code",
@@ -719,7 +719,7 @@
         "\n",
         "c.tconfint_diff(alpha=a, alternative=alt, usevar=ve) # \u4fe1\u983c\u533a\u9593"
       ],
-      "id": "d32041fe-8bfc-4293-95d0-bae53bcdb4f4"
+      "id": "70d481ad-5926-47c6-a86c-3b288066a1ae"
     },
     {
       "cell_type": "code",
@@ -732,7 +732,7 @@
         "          '/fromzero/master/data/smoker.csv')\n",
         "my_data = pd.read_csv(my_url)"
       ],
-      "id": "e4c749fa-4f1f-4536-acb7-5f9eae7fb3e2"
+      "id": "b41e6410-3058-48c6-a58a-a944af96d4ef"
     },
     {
       "cell_type": "code",
@@ -742,7 +742,7 @@
       "source": [
         "my_data.head()"
       ],
-      "id": "f713abbe-f1f8-44ab-b690-fdada406fbfe"
+      "id": "27abd68e-8fce-42af-bd75-e9bf839fdf27"
     },
     {
       "cell_type": "code",
@@ -755,7 +755,7 @@
         "    my_data['smoker'])\n",
         "my_table"
       ],
-      "id": "e2606a42-fb5b-4f4a-8066-c46d4c61f017"
+      "id": "5d23dcf5-c4fa-44a3-bd36-2e2d89137bf6"
     },
     {
       "cell_type": "code",
@@ -766,7 +766,7 @@
         "from scipy.stats import chi2_contingency\n",
         "chi2_contingency(my_table, correction=False)[1]"
       ],
-      "id": "ab651d70-6ce3-4623-845f-9838bcb4f398"
+      "id": "dbb4aa7a-3e52-4e95-be4b-2d9462c80487"
     },
     {
       "cell_type": "code",
@@ -785,7 +785,7 @@
         "n = 10**5\n",
         "result = [sum(np.random.choice(X, len(X), replace=True)) for _ in range(n)] # \u624b\u98064"
       ],
-      "id": "bc659567-4de9-464a-bb10-f828600ec519"
+      "id": "29d809ec-0cf8-40a9-8f7a-bb427b2ce53d"
     },
     {
       "cell_type": "code",
@@ -796,7 +796,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.hist(result, bins=range(0, 16))"
       ],
-      "id": "763881f1-ddd4-4a7a-9980-3ca398bd1bc9"
+      "id": "8dc5af08-a606-4305-8080-09e3b73847f9"
     },
     {
       "cell_type": "code",
@@ -806,7 +806,7 @@
       "source": [
         "np.quantile(result, [0.025, 0.975])"
       ],
-      "id": "3828f5eb-2419-4abb-a1bc-b5e1fe44289d"
+      "id": "c6ce48f1-7c7a-4cda-a059-c3a0ad4b5cf5"
     }
   ],
   "nbformat": 4,
